--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -5,10 +5,8 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
-
     <com.youth.banner.Banner
-        android:id="@+id/home_page_banner"
+        android:id="@+id/banner_hot_point_tab"
         android:layout_width="match_parent"
         android:layout_height="@dimen/app_160dp"
         android:layout_marginStart="8dp"
@@ -19,14 +17,53 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
+    <RelativeLayout
+        android:layout_below="@id/banner_hot_point_tab"
+        android:id="@+id/area_nav_buttons_home_page_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/app_50dp">
+
+        <com.zhuodp.graduationproject.utils.view.CircleImageView
+            android:id="@+id/btn_menu1_home_page_fragment"
+            android:layout_width="@dimen/app_30dp"
+            android:layout_height="@dimen/app_30dp"
+            android:layout_alignBottom="@id/btn_menu2_home_page_fragment"
+            android:layout_marginRight="@dimen/app_70dp"
+            android:layout_toLeftOf="@id/btn_menu2_home_page_fragment"
+            android:background="@drawable/icon_clock_latest_movie"
+            android:elevation="@dimen/app_3dp"/>
+
+        <com.zhuodp.graduationproject.utils.view.CircleImageView
+            android:id="@+id/btn_menu2_home_page_fragment"
+            android:layout_width="@dimen/app_30dp"
+            android:layout_height="@dimen/app_30dp"
+            android:layout_centerInParent="true"
+            android:background="@drawable/icon_hot_piont"
+            android:elevation="@dimen/app_3dp"
+            />
+
+        <com.zhuodp.graduationproject.utils.view.CircleImageView
+            android:id="@+id/btn_menu3_home_page_fragment"
+            android:layout_width="@dimen/app_30dp"
+            android:layout_height="@dimen/app_30dp"
+            android:layout_toRightOf="@id/btn_menu2_home_page_fragment"
+            android:layout_alignBottom="@id/btn_menu2_home_page_fragment"
+            android:layout_marginLeft="@dimen/app_70dp"
+            android:background="@drawable/icon_guess_what_you_like"
+            android:elevation="@dimen/app_3dp"
+            />
+
+    </RelativeLayout>
+
+
 
     <android.support.design.widget.TabLayout
         android:id="@+id/home_page_tab_layout"
-        android:layout_below="@id/home_page_banner"
-        android:layout_marginTop="@dimen/app_10dp"
+        android:layout_below="@id/area_nav_buttons_home_page_fragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabTextColor="@color/color_36404A"
+        android:background="@color/blue_E0F0FF"
     />
 
     <android.support.v4.view.ViewPager
