--- a/app/src/main/res/layout/activity_movie_list.xml
+++ b/app/src/main/res/layout/activity_movie_list.xml
@@ -9,66 +9,97 @@
         android:id="@+id/ll_sort_area"
         android:layout_width="match_parent"
         android:layout_height="@dimen/app_40dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="@color/B4">
 
-        <TextView
-            android:id="@+id/tv_sorted_by_type"
-            android:onClick="onSortedByType"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="@dimen/app_0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/app_35dp"
-            android:textSize="@dimen/app_font_size_15"
-            android:text="按电影类型"
-            android:textColor="@color/color_36404A"/>
+            android:layout_weight="1"
+            android:gravity="center"
+            android:layout_gravity="center">
 
-        <ImageView
-            android:id="@+id/iv_sorted_by_type"
-            android:onClick="onSortedByType"
-            android:layout_width="@dimen/app_15dp"
-            android:layout_height="@dimen/app_15dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/icon_down_menu"
-            android:layout_gravity="center_vertical"/>
+            <TextView
+                android:id="@+id/tv_sorted_by_type"
+                android:onClick="onSortedByType"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/app_30dp"
+                android:layout_gravity="center_vertical"
+                android:gravity="center"
+                android:textSize="@dimen/app_font_size_15"
+                android:text="按电影类型"
+                android:textColor="@color/color_36404A"/>
 
+            <ImageView
+                android:id="@+id/iv_sorted_by_type"
+                android:layout_toRightOf="@id/tv_sorted_by_type"
+                android:onClick="onSortedByType"
+                android:layout_width="@dimen/app_15dp"
+                android:layout_height="@dimen/app_15dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/icon_down_menu"
+                android:layout_centerVertical="true"/>
 
-        <TextView
-            android:id="@+id/tv_sorted_by_time"
-            android:onClick="onSortedByTime"
-            android:layout_width="wrap_content"
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="@dimen/app_0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/app_20dp"
-            android:textColor="@color/color_36404A"
-            android:text="按年份"/>
+            android:layout_weight="1"
+            android:gravity="center"
+            android:layout_gravity="center">
 
-        <ImageView
-            android:id="@+id/iv_sorted_by_time"
-            android:onClick="onSortedByTime"
-            android:layout_width="@dimen/app_15dp"
-            android:layout_height="@dimen/app_15dp"
-            android:layout_gravity="center_vertical"
-            android:scaleType="fitXY"
-            android:src="@drawable/icon_down_menu" />
+            <TextView
+                android:id="@+id/tv_sorted_by_time"
+                android:onClick="onSortedByTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="@dimen/app_20dp"
+                android:textColor="@color/color_36404A"
+                android:text="按年份"/>
 
-        <TextView
-            android:id="@+id/tv_sorted_by_country"
-            android:onClick="onSortedByCountry"
-            android:layout_width="wrap_content"
+            <ImageView
+                android:id="@+id/iv_sorted_by_time"
+                android:onClick="onSortedByTime"
+                android:layout_width="@dimen/app_15dp"
+                android:layout_height="@dimen/app_15dp"
+                android:layout_gravity="center_vertical"
+                android:scaleType="fitXY"
+                android:src="@drawable/icon_down_menu"
+                android:layout_toRightOf="@id/tv_sorted_by_time"/>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="@dimen/app_0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/app_20dp"
-            android:textColor="@color/color_36404A"
-            android:text="按地区"/>
+            android:layout_weight="1"
+            android:gravity="center"
+            android:layout_gravity="center">
 
-        <ImageView
-            android:id="@+id/iv_sorted_by_country"
-            android:onClick="onSortedByCountry"
-            android:layout_width="@dimen/app_16dp"
-            android:layout_height="@dimen/app_16dp"
-            android:src="@drawable/icon_down_menu"
-            android:scaleType="fitXY"
-            android:layout_gravity="center_vertical"/>
+            <TextView
+                android:id="@+id/tv_sorted_by_country"
+                android:onClick="onSortedByCountry"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="@dimen/app_20dp"
+                android:textColor="@color/color_36404A"
+                android:text="按地区"
+                />
+
+            <ImageView
+                android:id="@+id/iv_sorted_by_country"
+                android:onClick="onSortedByCountry"
+                android:layout_width="@dimen/app_16dp"
+                android:layout_height="@dimen/app_16dp"
+                android:src="@drawable/icon_down_menu"
+                android:scaleType="fitXY"
+                android:layout_gravity="center_vertical"
+                android:layout_toRightOf="@id/tv_sorted_by_country"/>
+
+        </RelativeLayout>
     </LinearLayout>
 
     <GridView
