--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -16,7 +16,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="@dimen/app_38dp"
-            android:background="@color/blue_3f78a8"
+            android:background="@color/color_36404A"
             app:popupTheme="@style/AppTheme.PopupOverlay"
             app:title="">
 
