--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,33 +5,29 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="拍照上传"/>
+            android:id="@+id/nav_download"
+            android:icon="@drawable/icon_download"
+            android:title="本地电影"/>
+
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="本地照片"/>
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow"/>
-        <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
+            android:id="@+id/nav_settings"
+            android:icon="@drawable/pic_navigation_setting"
             android:title="Tools"/>
+
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="用户">
         <menu>
             <item
                 android:id="@+id/nav_share"
                 android:icon="@drawable/ic_menu_share"
-                android:title="Share"/>
+                android:title="分享"/>
+
             <item
                 android:id="@+id/nav_logout"
                 android:icon="@drawable/icon_close"
                 android:title="退出登陆"/>
+
         </menu>
     </item>
 
