--- a/app/src/main/res/layout/item_recycler_view_collection_list.xml
+++ b/app/src/main/res/layout/item_recycler_view_collection_list.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/app_font_size_20"
-        android:layout_marginLeft="@dimen/app_30dp"
+        android:layout_centerHorizontal="true"
         android:text="瑞秋的电影"
         android:textStyle="bold"/>
 
