--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,20 +9,17 @@
             android:icon="@drawable/icon_download"
             android:title="本地电影"/>
 
-        <item
-            android:id="@+id/nav_settings"
-            android:icon="@drawable/pic_navigation_setting"
-            android:title="Tools"/>
-
-        <item
-            android:id="@+id/nav_share"
-            android:icon="@drawable/ic_menu_share"
-            android:title="分享"/>
 
         <item
             android:id="@+id/nav_logout"
             android:icon="@drawable/icon_close"
             android:title="退出登陆"/>
+
+
+        <item
+            android:id="@+id/nav_settings"
+            android:icon="@drawable/pic_navigation_setting"
+            android:title="设置"/>
 
     </group>
 
